--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Temp Test Index Page</title>
-<link
-	rel="stylesheet"
-	href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
 
+<title>Realestate and Realtor Listings</title>
+<meta http-equiv="refresh" content="0; URL='index.jsp'" />
 </head>
 <body>
 
-	<h3>Testing form for jsp functionality</h3>
+	<!-- <h3>Testing form for jsp functionality</h3>
 	<form
 		action="form_process.jsp"
 		method="post">
@@ -23,6 +20,6 @@
 			name="zipcode" /><br> <br> <input
 			type="submit"
 			value="Submit" />
-	</form>
+	</form>  -->
 </body>
 </html>
